Git doesn't support $Date$. Put in the real copyright date. Start removing other $...$ svn stuff.

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <!--
-    Copyright 2004 - $Date$ by PeopleWare n.v.
+    Copyright 2004 - 2016 by PeopleWare n.v.
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -17,7 +17,7 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 
-    $Date$
+    2016
     $Revision$
     $HeadURL$
   -->
