--- a/src/main/java/org/ppwcode/vernacular/semantics/VII/bean/RousseauBean.properties
+++ b/src/main/java/org/ppwcode/vernacular/semantics/VII/bean/RousseauBean.properties
@@ -1,5 +1,5 @@
 # <license>
-# Copyright 2004 - $Date$ by PeopleWare n.v.
+# Copyright 2004 - 2016 by PeopleWare n.v.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -16,7 +16,7 @@
 
 # $HeadURL$
 # $Revision$
-# $Date$
+# 2016
 
 type.singular = Rousseau Bean
 type.plural = Rousseau Beans
