[maven-release-plugin] prepare release release/1.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
@@ -102,7 +100,7 @@
     <!-- Meta information about the project -->
     <groupId>org.ppwcode</groupId>
     <artifactId>ppwcode-vernacular-semantics-VII</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <name>ppwcode semantics vernacular</name>
     <description>Framework, guidelines, support for developing the semantic layer of a business application.</description>
@@ -121,7 +119,7 @@
         <url>https://github.com/peopleware/java-ppwcode-vernacular-semantics</url>
         <connection>scm:git:https://github.com/peopleware/java-ppwcode-vernacular-semantics.git</connection>
         <developerConnection>scm:git:https://github.com/peopleware/java-ppwcode-vernacular-semantics.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>release/1.0.0</tag>
     </scm>
     <issueManagement>
         <system>GitHub</system>
