--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
     <!-- Meta information about the project -->
     <groupId>org.ppwcode</groupId>
     <artifactId>ppwcode-vernacular-semantics-VII</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>ppwcode semantics vernacular</name>
     <description>Framework, guidelines, support for developing the semantic layer of a business application.</description>
@@ -119,7 +119,7 @@
         <url>https://github.com/peopleware/java-ppwcode-vernacular-semantics</url>
         <connection>scm:git:https://github.com/peopleware/java-ppwcode-vernacular-semantics.git</connection>
         <developerConnection>scm:git:https://github.com/peopleware/java-ppwcode-vernacular-semantics.git</developerConnection>
-      <tag>release/1.0.0</tag>
+      <tag>HEAD</tag>
     </scm>
     <issueManagement>
         <system>GitHub</system>
